[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/baseball/PlayfieldBaseball.gd" type="Script" id=1]
[ext_resource path="res://assets/baseball/baseball-static-test.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=2]

[node name="PlayfieldBaseball" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../..")

[node name="Baseball-top" type="Node2D" parent="."]

[node name="Timer" type="Timer" parent="."]

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[connection signal="child_exiting_tree" from="." to="." method="_on_Baseball_child_exiting_tree"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
